--- a/src/styles/calcStyles.css
+++ b/src/styles/calcStyles.css
@@ -1,8 +1,12 @@
+.container {
+  background-color: #eee;
+  width: 400px;
+  margin: auto;
+}
+
 .grid-container {
   display: grid;
   grid-template-columns: auto auto auto auto;
-  width: 400px;
-  margin: auto;
 }
 
 .calculator button {
@@ -18,8 +22,8 @@
 }
 
 .display {
-  grid-column: 1 / 5;
   text-align: right;
+  padding: 20px 35px;
 }
 
 .zero {
